--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "next": "14.1.0",
-    "react": "^18",
+    "next-images": "^1.8.5",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "yarn": "^1.22.21"
   },
   "devDependencies": {
     "@types/node": "^20",
