--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18",
     "react-router-dom": "^6.22.0",
+    "socket.io-client": "^4.7.4",
     "yarn": "^1.22.21"
   },
   "devDependencies": {
